force-app/main/default/objects/ActivityReport__c/ActivityReport__c.object-meta.xml
<CustomObject>
    <label>業務報告</label>
    <nameField>
        <label>業務報告名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>