force-app/main/default/objects/ActivityReport__c/fields/OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFullName__c</fullName>
    <formula>Owner:User.LastName &amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
    <label>所有者氏名</label>
    <type>Text</type>
</CustomField>