force-app/main/default/objects/ActivityReport__c/fields/ReportNo__c.field-meta.xml
<CustomField>
    <fullName>ReportNo__c</fullName>
    <label>No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>