force-app/main/default/objects/ActivityReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ReportNo__c</columns>
    <columns>NAME</columns>
    <columns>DateTime__c</columns>
    <columns>Detail__c</columns>
    <columns>OwnerFullName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>